review food and update UI

--- a/my_res/src/components/Order/test.html
+++ b/my_res/src/components/Order/test.html
@@ -19,128 +19,52 @@
     <!-- .  -->
     <!-- .  -->
     <!-- .  -->
-    <form class="row g-3 needs-validation was-validated" novalidate="">
-      <div class="col-md-4">
-        <div class="form-floating mb-3">
-          <input
-            type="text"
-            class="form-control"
-            id="recvName"
-            placeholder="name@example.com"
-            required
-          />
-          <label for="recvName">Họ tên người nhận</label>
-        </div>
 
-        <!-- <label for="validationCustom01" class="form-label">First name</label>
-        <input
-          type="text"
-          class="form-control"
-          id="validationCustom01"
-          required
-        /> -->
-        <div class="valid-feedback"></div>
-      </div>
+    <!-- Button trigger modal -->
+    <button
+      type="button"
+      class="btn btn-primary"
+      data-bs-toggle="modal"
+      data-bs-target="#exampleModal"
+    >
+      Launch demo modal
+    </button>
 
-      <div class="col-md-4">
-        <div class="form-floating mb-3">
-          <input
-            type="email"
-            class="form-control"
-            id="recvEmail"
-            placeholder="name@example.com"
-            required
-          />
-          <label for="recvEmail">Địa chỉ Email</label>
-
-          <div id="emailHelp" class="form-text">
-            Chúng tôi sẽ không chia sẻ email của bạn cho bất cứ ai.
+    <!-- Modal -->
+    <div
+      class="modal modal-dialog modal-dialog-centered "
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
           </div>
         </div>
-
-        <div class="valid-feedback"></div>
       </div>
-
-      <div class="col-md-4">
-        <div class="form-floating mb-3">
-          <input
-            type="tel"
-            class="form-control"
-            id="recvTel"
-            placeholder="name@example.com"
-            required
-          />
-          <label for="recvTel">Số điện thoại</label>
-
-          <div id="emailHelp" class="form-text">
-            Chúng tôi sẽ không chia sẻ số điện thoại của bạn cho bất cứ ai.
-          </div>
-        </div>
-
-        <div class="invalid-feedback"></div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="form-floating mb-3">
-          <input
-            type="text"
-            class="form-control"
-            id="recvAddr"
-            placeholder="name@example.com"
-            required
-          />
-          <label for="recvAddr">Số nhà, đường</label>
-        </div>
-
-        <div class="invalid-feedback"></div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="form-floating">
-          <select
-            class="form-select"
-            id="recvDistrict"
-            aria-label="Floating label select example"
-            required
-          >
-            <option selected></option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-          </select>
-
-          <label for="recvDistrict">Quận</label>
-
-          <div id="emailHelp" class="form-text">
-            Nhà hàng chỉ phục vụ trên địa bàn Thành phố Hồ Chí Minh.
-          </div>
-        </div>
-
-        <div class="invalid-feedback"></div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="form-floating">
-          <select
-            class="form-select"
-            id="recvWard"
-            aria-label="Floating label select example"
-            required
-          >
-            <option selected></option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-          </select>
-
-          <label for="recvWard">Phường</label>
-        </div>
-
-        <div class="invalid-feedback"></div>
-      </div>
-
-      <div class="col-12">
-        <button class="btn btn-primary" type="submit">Tiếp tục</button>
-      </div>
-    </form>
+    </div>
 
     <!-- -  -->
     <!-- -  -->
